# actionshift

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: config.yaml
experiments/: analyze_adaptation.py  analyze_delay_slices.py  analyze_imitation.py  bench_cpp_fusion.py  export_labeled_traces.py  run_absolute_excitation.sh  run_adaptation_slice.py  run_delay_slice.py  run_factorized_slice.py  run_imitation_brittleness.py  run_probe_osi_slice.py  run_recurrent_slice.py  run_rotation_v2_campaign.sh  run_rotation_v2_parity.py  train_delay_aware.py  train_dp_backbone.py  train_osi_real.py  train_probe_osi_real.py  train_recurrent_real.py
media/: make_media.py  make_paper_figs.py  make_plots.py  style.py
patches/: maniskill-tdmpc2-gymnasium-1.3.patch
reports/: absolute_excitation.md  adaptation_delay_aware.md  adaptation_dualabi.md  adaptation_factorized.md  adaptation_grasp_channel.md  adaptation_probe_osi.md  adaptation_recurrent.md  adaptation_scale_corrector.md  adaptation_stage1.md  adaptation_tournament.md  baseline_budgets.json  cpp_fusion.md  delayed_rl_external.md  delayed_rl_sac.md  fourth_task.md  gate0.md  gate1.md  imitation_brittleness.md  lag_completions.md  maniskill_cpu_smoke.json  maniskill_gpu_smoke.json  peg_retry.md  rotation_v2.md  selftest_tool.md  third_task.md  transformer_icl_adjudication.md  week_one_gate.json
scripts/: analyze_gate1_slice.py  bootstrap_sprint.py  evaluate_gate1_slice.py  evaluate_ppo_parity.py  plan_gate1_slices.py  smoke_matrix.sh
tests/: test_adaptation_calibration.py  test_adaptation_dualabi.py  test_adaptation_factorized.py  test_adaptation_grasp_channel.py  test_adaptation_hold_probe.py  test_adaptation_probe_osi.py  test_adaptation_probes.py  test_adaptation_recurrent.py  test_adaptation_scale_corrector.py  test_adaptation_stage1.py  test_adaptation_training.py  test_cpp_fusion.py  test_delay_aware.py  test_imitation_dp_shim.py  test_release_assets.py  test_rotation_v2.py  test_selftest.py
(+151 files in other folders)
